--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "firebase": "^4.12.1",
+    "nativescript": "^5.0.3",
     "ngx-infinite-scroll": "^6.0.1",
+    "nodemailer": "^4.7.0",
     "rxjs": "^6.0.0",
     "zone.js": "~0.8.26"
   },
